src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail16.jova
class Test{
  public int foo(int x){
    return 0;
  }

  public int foo(){
    return 0;
  }

  public int foo() {
      return false;
  }

  public int foo(String x){
    return 0;
  }
}
